<resources>
    <string name="app_name">Dictio</string>
    <string name="mydictionaries">My dictionaries</string>
    <string name="buttonAddDictionary">Add dictionary</string>
    <string name="badInputDictionaryCreation">Dictionary language mustn\'t be empty!</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="translate">Translate</string>
    <string name="translateHint">Enter text</string>
    <string name="searchTermHint">What are you looking for?</string>
    <string name="errorGettingDicts">Error happened while retrieving data for dictionaries!</string>
    <string name="errorGettingTerms">Error happened while retrieving data for terms!</string>
    <string name="errorInsertingDict">Error happened while adding dictionary!</string>
    <string name="errorInsertingTerm">Error happened while adding term!</string>
    <string name="errorDeletingDict">Error happened while deleting dictionary!</string>
    <string name="errorDeletingTerm">Error happened while deleting term!</string>
    <string name="successInsertingDict">New dictionary added!</string>
    <string name="successInsertingTerm">New term added!</string>
    <string name="successDeletingDict">Dictionary deleted.</string>
    <string name="successDeletingTerm">Term deleted</string>
    <string name="confirmationDictDeletion">Are you sure you want to delete the dictionary?</string>
    <string name="confirmationTermDeletion">Are you sure you want to delete the term?</string>
    <string name="termForeign">foreign word</string>
    <string name="termMeaning">it\'s meaning</string>
    <string name="addTerm">Add translation</string>
    <string name="badInputTermAndTranslation">Both the term and the translation have to be inputted.</string>
    <string name="errorTranslating">Error happened while translating!</string>
    <string name="pictureSelect">Select a picture</string>
    <string name="defaultLanguages">Default languages</string>
    <string name="customLanguages">Custom languages</string>
    <string name="italian">Italian</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="arabic">Arabic</string>
    <string name="chinese">Chinese</string>
    <string name="azerbaijani">Azerbaijani</string>
    <string name="catalan">Catalan</string>
    <string name="czech">Czech</string>
    <string name="danish">Danish</string>
    <string name="finnish">Finnish</string>
    <string name="dutch">Dutch</string>
    <string name="greek">Greek</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="polish">Polish</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="slovak">Slovak</string>
    <string name="spanish">Spanish</string>
    <string name="swedish">Swedish</string>
    <string name="turkish">Turkish</string>
    <string name="ukrainian">Ukrainian</string>
</resources>