<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/termBackButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/backicon"/>
        <TextView
            android:id="@+id/termTitle"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:fontFamily="@font/playfairdisplayregular"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/termTranslateInput"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:hint="@string/translateHint"/>
        <Button
            android:id="@+id/termTranslateButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/translate"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <EditText
            android:id="@+id/termForeign"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="@string/termForeign"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/term"/>
        <EditText
            android:id="@+id/termMeaning"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="@string/termMeaning"/>

    </LinearLayout>

    <Button
        android:id="@+id/addTermButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/addTerm"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/termRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>